--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
   <title>Home</title>
 </head>
 <body>
+  <header>
+    <h1>Berries</h1>
+  </header>
+
+  <main>
+    <nav>
+      <ul>
+        <li>- Blueberries <a href="#"</a></li>
+        <li>- Grapes<a href="#"</a></li>
+        <li>- Red Currants<a href="#"</a></li>
+        <li>- Bananas<a href="#"</a></li>
+      </ul>
+    </nav>
+
+    <h2>Berries, berries, oh my!</h2>
+    <p>
+      In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.
+    </p>
+  </main>
+
+  <footer>
+    <p>© Berries</p>
+  </footer>
 
 </body>
 </html>
