--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
   <main>
     <nav>
       <ul>
-        <li>- Blueberries <a href="#"</a></li>
-        <li>- Grapes<a href="#"</a></li>
-        <li>- Red Currants<a href="#"</a></li>
-        <li>- Bananas<a href="#"</a></li>
+        <li><a href="berries/index.html">Berries</a></li>
+        <li><a href="#">Resourses</a></li>
       </ul>
     </nav>
 
     <h2>Berries, berries, oh my!</h2>
-    <p>
-      In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.
-    </p>
+    <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <ul>
+      <li>- Blueberries</li>
+      <li>- Grapes</li>
+      <li>- Red Currants</li>
+      <li>- Bananas</li>
+    </ul>
   </main>
 
   <footer>
