--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home</title>
 </head>
 <body>
   <header>
     <h1>Berries</h1>
-  </header>
-
-  <main>
     <nav>
       <ul>
         <li><a href="berries/index.html">Berries</a></li>
-        <li><a href="#">Resourses</a></li>
+        <li><a href="resouces/indes.html">Resourses</a></li>
       </ul>
     </nav>
-
+  </header>
+  <main>
     <h2>Berries, berries, oh my!</h2>
     <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
     <ul>
