--- a/berries/index.html
+++ b/berries/index.html
@@ -12,8 +12,8 @@
     <h1>Berries</h1>
     <nav>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Resources</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resouces/indes.html">Resources</a></li>
       </ul>
     </nav>
   </header>
