--- a/berries/index.html
+++ b/berries/index.html
@@ -12,7 +12,7 @@
     <h1>Berries</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="resouces/indes.html">Resources</a></li>
       </ul>
     </nav>
