--- a/berries/index.html
+++ b/berries/index.html
@@ -13,7 +13,7 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="resouces/indes.html">Resources</a></li>
+        <li><a href="../resouces/indes.html">Resources</a></li>
       </ul>
     </nav>
   </header>
@@ -21,11 +21,15 @@
     <h2>Lots of berries—some you didn’t know!</h2>
     <p>There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.</p>
     <ul>
-      <li>- Blueberries</li>
-      <li>- Grapes</li>
-      <li>- Red Currants</li>
-      <li>- Bananas</li>
+      <li><a href="berrires/blueberries.html">- Blueberries</a></li>
+      <li><a href="berrires/grapes.html">- Grapes</a></li>
+      <li><a href="berrires/red-currants.html">- Red Currants</a></li>
+      <li><a href="berrires/bananas.html">- Bananas</a></li>
     </ul>
   </main>
+
+  <footer>
+    <p>© Berries</p>
+  </footer>
 </body>
 </html>
