--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <h2>Berries, berries, oh my!</h2>
     <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
     <ul>
-      <li>- Blueberries</li>
-      <li>- Grapes</li>
-      <li>- Red Currants</li>
-      <li>- Bananas</li>
+      <li><a href="berrires/blueberries.html">- Blueberries</a></li>
+      <li><a href="berrires/grapes.html">- Grapes</a></li>
+      <li><a href="berrires/red-currants.html">- Red Currants</a></li>
+      <li><a href="berrires/bananas.html">- Bananas</a></li>
     </ul>
   </main>
 
