--- a/berries/blueberries.html
+++ b/berries/blueberries.html
@@ -20,7 +20,7 @@
 
   <main>
     <h2>Blueberries</h2>
-    <img src="../images/blueberries.jpg" alt="images of blueberries growing">
+    <img src="../images/blueberries.jpg" alt="images of blueberries growing on a vine">
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
    </main>
 
