Added content to resources.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <h1>Berries</h1>
     <nav>
       <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="berries/index.html">Berries</a></li>
-        <li><a href="resouces/indes.html">Resourses</a></li>
+        <li><a href="resouces/index.html">Resourses</a></li>
       </ul>
     </nav>
   </header>
