--- a/berries/index.html
+++ b/berries/index.html
@@ -13,6 +13,7 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
+        <li><a href="index.html">Berries</a></li>
         <li><a href="../resouces/indes.html">Resources</a></li>
       </ul>
     </nav>
