--- a/berries/bananas.html
+++ b/berries/bananas.html
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="index.html"</a></li>
+        <li><a href="index.html">Berries</a></li>
         <li><a href="../resouces/indes.html">Resources</a></li>
       </ul>
     </nav>
@@ -24,7 +24,7 @@
     <p>Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.</p>
    </main>
 
-  <footer>
+  <footer role="complementary">
     <p>© Berries</p>
   </footer>
 </body>
