--- a/berries/blueberries.html
+++ b/berries/blueberries.html
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="index.html"</a></li>
+        <li><a href="index.html">Berries</a></li>
         <li><a href="../resouces/indes.html">Resources</a></li>
       </ul>
     </nav>
@@ -24,7 +24,7 @@
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
    </main>
 
-  <footer>
+  <footer role="complementary">
     <p>© Berries</p>
   </footer>
 </body>
