--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="index.html"</a></li>
+        <li><a href="index.html">Berries</a></li>
         <li><a href="../resouces/indes.html">Resources</a></li>
       </ul>
     </nav>
@@ -24,7 +24,7 @@
     <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
    </main>
 
-  <footer>
+  <footer role="complementary">
     <p>© Berries</p>
   </footer>
 </body>
