--- a/berries/index.html
+++ b/berries/index.html
@@ -7,14 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-
   <header>
     <h1>Berries</h1>
     <nav>
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="index.html">Berries</a></li>
-        <li><a href="../resouces/indes.html">Resources</a></li>
+        <li><a href="../index.html" aria-label="go to home">Home</a></li>
+        <li><a href="index.html" aria-label="go to berries">Berries</a></li>
+        <li><a href="../resouces/indes.html" aria-label="go to resources">Resources</a></li>
       </ul>
     </nav>
   </header>
@@ -22,14 +21,14 @@
     <h2>Lots of berries—some you didn’t know!</h2>
     <p>There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.</p>
     <ul>
-      <li><a href="berrires/blueberries.html">- Blueberries</a></li>
-      <li><a href="berrires/grapes.html">- Grapes</a></li>
-      <li><a href="berrires/red-currants.html">- Red Currants</a></li>
-      <li><a href="berrires/bananas.html">- Bananas</a></li>
+      <li><a href="berrires/blueberries.html" aria-label="Read more about blueberries">- Blueberries</a></li>
+      <li><a href="berrires/grapes.html" aria-label="Read more about grapes">- Grapes</a></li>
+      <li><a href="berrires/red-currants.html" aria-label="Read more about red currants">- Red Currants</a></li>
+      <li><a href="berrires/bananas.html" aria-label="Read more about bananas">- Bananas</a></li>
     </ul>
   </main>
 
-  <footer>
+  <footer role="complementary">
     <p>© Berries</p>
   </footer>
 </body>
