--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="index.html"</a></li>
+        <li><a href="index.html">Berries</a></li>
         <li><a href="../resouces/indes.html">Resources</a></li>
       </ul>
     </nav>
@@ -24,7 +24,7 @@
     <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
    </main>
 
-  <footer>
+  <footer role="complementary">
     <p>© Berries</p>
   </footer>
 </body>
