--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-  <header>
+  <header role="banner">
     <h1>Berries</h1>
-    <nav>
+    <nav role="navigation">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="berries/index.html">Berries</a></li>
-        <li><a href="resouces/index.html">Resourses</a></li>
+        <li><a href="index.html" aria-label="go to home">Home</a></li>
+        <li><a href="berries/index.html" aria-label="go to berries">Berries</a></li>
+        <li><a href="resources/index.html" aria-label="go to resources">Resources</a></li>
       </ul>
     </nav>
   </header>
-  <main>
+  <main role="main">
     <h2>Berries, berries, oh my!</h2>
     <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
     <ul>
-      <li><a href="berrires/blueberries.html">- Blueberries</a></li>
-      <li><a href="berrires/grapes.html">- Grapes</a></li>
-      <li><a href="berrires/red-currants.html">- Red Currants</a></li>
-      <li><a href="berrires/bananas.html">- Bananas</a></li>
+      <li><a href="berrires/blueberries.html" aria-label="Read more about blueberries">- Blueberries</a></li>
+      <li><a href="berrires/grapes.html" aria-label="Read more about grapes">- Grapes</a></li>
+      <li><a href="berrires/red-currants.html" aria-label="Read more about red currants">- Red Currants</a></li>
+      <li><a href="berrires/bananas.html" aria-label="Read more about bananas">- Bananas</a></li>
     </ul>
   </main>
 
-  <footer>
+  <footer role="complementary">
     <p>© Berries</p>
   </footer>
 
