--- a/resources/index.html
+++ b/resources/index.html
@@ -11,9 +11,9 @@
     <h1>Berries</h1>
     <nav>
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../berries/index.html">Berries</a></li>
-        <li><a href="index.html">Resourses</a></li>
+        <li><a href="../index.html"aria-label="go to home">Home</a></li>
+        <li><a href="../berries/index.html" aria-label="go to berries">Berries</a></li>
+        <li><a href="index.html" aria-label="go to resources">Resources</a></li>
       </ul>
     </nav>
   </header>
@@ -30,6 +30,17 @@
       <li><a href="https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html"></a>- https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html</li>
       <li><a href="https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html"></a>- https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html</li>
     </ul>
+    <ul>
+      <li><a href="berrires/blueberries.html" aria-label="Read more about blueberries">- Blueberries</a></li>
+      <li><a href="berrires/grapes.html" aria-label="Read more about grapes">- Grapes</a></li>
+      <li><a href="berrires/red-currants.html" aria-label="Read more about red currants">- Red Currants</a></li>
+      <li><a href="berrires/bananas.html" aria-label="Read more about bananas">- Bananas</a></li>
+    </ul>
   </main>
+
+  <footer role="complementary">
+    <p>© Berries</p>
+  </footer>
+
 </body>
 </html>
