--- a/berries/bananas.html
+++ b/berries/bananas.html
@@ -7,24 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-  <header>
+  <header role="banner">
     <h1>Berrires</h1>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="index.html">Berries</a></li>
-        <li><a href="../resouces/indes.html">Resources</a></li>
+        <li><a href="../resouces/resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
+  <main role="main">
     <h2>Bananas</h2>
     <img src="../images/bananas.jpg" alt="images of a bunch of bananas">
     <p>Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.</p>
-   </main>
+  </main>
 
-  <footer role="complementary">
+  <footer role="contentinfo">
     <p>© Berries</p>
   </footer>
 </body>
