--- a/berries/blueberries.html
+++ b/berries/blueberries.html
@@ -7,24 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-  <header>
+  <header role="banner">
     <h1>Berrires</h1>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="index.html">Berries</a></li>
-        <li><a href="../resouces/indes.html">Resources</a></li>
+        <li><a href="../resouces/resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
+  <main role="main">
     <h2>Blueberries</h2>
     <img src="../images/blueberries.jpg" alt="images of blueberries growing on a vine">
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
-   </main>
+  </main>
 
-  <footer role="complementary">
+  <footer role="contentinfo">
     <p>© Berries</p>
   </footer>
 </body>
