--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -7,24 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-  <header>
+  <header role="banner">
     <h1>Berrires</h1>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="index.html">Berries</a></li>
-        <li><a href="../resouces/indes.html">Resources</a></li>
+        <li><a href="../resouces/resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
+  <main role="main">
     <h2>Grapes</h2>
     <img src="../images/grapes.jpg" alt="images of a bundle of grapes">
     <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
-   </main>
+  </main>
 
-  <footer role="complementary">
+  <footer role="contentinfo">
     <p>© Berries</p>
   </footer>
 </body>
