--- a/berries/index.html
+++ b/berries/index.html
@@ -7,17 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-  <header>
+  <header role="banner">
     <h1>Berries</h1>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="../index.html" aria-label="go to home">Home</a></li>
         <li><a href="index.html" aria-label="go to berries">Berries</a></li>
-        <li><a href="../resouces/indes.html" aria-label="go to resources">Resources</a></li>
+        <li><a href="../resouces/resources.html" aria-label="go to resources">Resources</a></li>
       </ul>
     </nav>
   </header>
-  <main>
+
+  <main role="main">
     <h2>Lots of berries—some you didn’t know!</h2>
     <p>There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.</p>
     <ul>
@@ -28,7 +29,7 @@
     </ul>
   </main>
 
-  <footer role="complementary">
+  <footer role="contentinfo">
     <p>© Berries</p>
   </footer>
 </body>
