--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -7,24 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-  <header>
+  <header role="banner">
     <h1>Berrires</h1>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="index.html">Berries</a></li>
-        <li><a href="../resouces/indes.html">Resources</a></li>
+        <li><a href="../resouces/resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
+  <main role="main">
     <h2>Red currants</h2>
     <img src="../images/red-currants.jpg" alt="images of red currants growing on a vine">
     <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
-   </main>
+  </main>
 
-  <footer role="complementary">
+  <footer role="contentinfo">
     <p>© Berries</p>
   </footer>
 </body>
