--- a/resources.html
+++ b/resources.html
@@ -7,18 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-  <header>
+  <header role="banner">
     <h1>Berries</h1>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="../index.html"aria-label="go to home">Home</a></li>
         <li><a href="../berries/index.html" aria-label="go to berries">Berries</a></li>
-        <li><a href="index.html" aria-label="go to resources">Resources</a></li>
+        <li><a href="resources.html" aria-label="go to resources">Resources</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
+  <main role="main">
     <h2>Resources</h2>
     <p>Find out more about berries!</p>
     <ul>
@@ -38,7 +38,7 @@
     </ul>
   </main>
 
-  <footer role="complementary">
+  <footer role="contentinfo">
     <p>© Berries</p>
   </footer>
 
