--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html" aria-label="go to home">Home</a></li>
         <li><a href="berries/index.html" aria-label="go to berries">Berries</a></li>
-        <li><a href="resources/resources.html" aria-label="go to resources">Resources</a></li>
+        <li><a href="resources.html" aria-label="go to resources">Resources</a></li>
       </ul>
     </nav>
   </header>
