--- a/berries/index.html
+++ b/berries/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="../index.html" aria-label="go to home">Home</a></li>
         <li><a href="index.html" aria-label="go to berries">Berries</a></li>
-        <li><a href="../resouces/resources.html" aria-label="go to resources">Resources</a></li>
+        <li><a href="../resources.html" aria-label="go to resources">Resources</a></li>
       </ul>
     </nav>
   </header>
@@ -22,10 +22,10 @@
     <h2>Lots of berries—some you didn’t know!</h2>
     <p>There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.</p>
     <ul>
-      <li><a href="berrires/blueberries.html" aria-label="Read more about blueberries">- Blueberries</a></li>
-      <li><a href="berrires/grapes.html" aria-label="Read more about grapes">- Grapes</a></li>
-      <li><a href="berrires/red-currants.html" aria-label="Read more about red currants">- Red Currants</a></li>
-      <li><a href="berrires/bananas.html" aria-label="Read more about bananas">- Bananas</a></li>
+      <li><a href="blueberries.html" aria-label="Read more about blueberries">- Blueberries</a></li>
+      <li><a href="grapes.html" aria-label="Read more about grapes">- Grapes</a></li>
+      <li><a href="red-currants.html" aria-label="Read more about red currants">- Red Currants</a></li>
+      <li><a href="bananas.html" aria-label="Read more about bananas">- Bananas</a></li>
     </ul>
   </main>
 
