--- a/resources.html
+++ b/resources.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <header role="banner">
-    <h1>Berries</h1>
+    <h1><strong>Berries</strong></h1>
     <nav role="navigation">
       <ul>
-        <li><a href="../index.html"aria-label="go to home">Home</a></li>
-        <li><a href="../berries/index.html" aria-label="go to berries">Berries</a></li>
+        <li><a href="index.html" aria-label="go to home">Home</a></li>
+        <li><a href="berries/index.html" aria-label="go to berries">Berries</a></li>
         <li><a href="resources.html" aria-label="go to resources">Resources</a></li>
       </ul>
     </nav>
