Updated all html files

--- a/berries/blueberries.html
+++ b/berries/blueberries.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header role="banner">
-    <h1>Berrires</h1>
+    <strong>Berries</strong>
     <nav role="navigation">
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -19,7 +19,7 @@
   </header>
 
   <main role="main">
-    <h2>Blueberries</h2>
+    <h1>Blueberries</h1>
     <img src="../images/blueberries.jpg" alt="images of blueberries growing on a vine">
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
   </main>
