--- a/berries/bananas.html
+++ b/berries/bananas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header role="banner">
-    <h1>Berrires</h1>
+    <strong>Berries</strong>
     <nav role="navigation">
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -19,7 +19,7 @@
   </header>
 
   <main role="main">
-    <h2>Bananas</h2>
+    <h1>Bananas</h1>
     <img src="../images/bananas.jpg" alt="images of a bunch of bananas">
     <p>Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.</p>
   </main>
