--- a/resources.html
+++ b/resources.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header role="banner">
-    <h1><strong>Berries</strong></h1>
+    <strong>Berries</strong>
     <nav role="navigation">
       <ul>
         <li><a href="index.html" aria-label="go to home">Home</a></li>
@@ -19,7 +19,7 @@
   </header>
 
   <main role="main">
-    <h2>Resources</h2>
+    <h1>Resources</h1>
     <p>Find out more about berries!</p>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Berry">- https://en.wikipedia.org/wiki/Berry</a></li>
